--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 /* Shared */
 @import 'shared/colors.css';
+@import 'shared/media.css';
 @import 'shared/typography.css';
 /* Components */
-@import 'components/Article.css';
+@import 'components/article.css';
