--- a/src/components/article.css
+++ b/src/components/article.css
@@ -1,9 +1,9 @@
 .article a {
-  color: var(--color-blue);
+  color: var(--color-accent);
 }
 
 .article p {
-  color: var(--color-black);
+  color: var(--color-max-dark);
   font-family: var(--font-text);
   font-size: 16px;
   font-weight: var(--font-weight);
@@ -11,7 +11,7 @@
 }
 
 .article h1 {
-  color: var(--color-black);
+  color: var(--color-accent);
   font-family: var(--font-headline);
   font-size: 40px;
   font-weight: var(--font-weight-headline);
@@ -19,7 +19,7 @@
   margin-bottom: 0;
 }
 
-@media (width > 600px) {
+@media (--medium) {
   .article {
     max-width: 30em;
   }
