media-query-plugin next example

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 /* Shared */
 @import 'shared/colors.css';
 @import 'shared/typography.css';
+@import 'shared/base.css';
 /* Components */
 @import 'components/article.css';
